# recommendation

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml
recommendation/: main.py
recommendation/filters/: abstract_filter.py  filter_holder.py  search_filters.py  utils.py
recommendation/models/: constants.py  exceptions.py  interfaces.py
recommendation/routes/: __init__.py  recommend.py
recommendation/services/: filter_methods.py  utils.py
